mudar img do  projeto genesis

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                      </p>
                             </div>
                             <div class="projetos_img">
-                                <img src="img/genesis.png" alt="">
+                                <img src="img/genesis2.png" alt="">
                             </div>
                         </div>  
 
