mudar img do  projeto genesis

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <div class="texto_projeto">
                                      <h2 class="titulo_projeto">Genesis</h2>
                                      <p>
-                                        Genesis foi um projeto desenvolvido como trabalho de conclusão de curso (TCC), concebido como uma plataforma educacional inicial, servindo de base conceitual para o desenvolvimento posterior do Sphere EDU. utilizando PHP como linguagem principal para o backend.Visando organizar conteúdos acadêmicos, disponibilizar recursos de aprendizagem e permitir a comunicação dentro do ambiente educacional.
+                                        Genesis foi um projeto desenvolvido como trabalho de conclusão de curso (TCC), concebido como uma plataforma educacional inicial, servindo de base conceitual para o desenvolvimento posterior do Sphere EDU. 
                                      </p>
                             </div>
                             <div class="projetos_img">
