mudansas no css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </section>
             <section class="projetos">
                 <div class="projetos_conteiner">
-                    <h1>Numero de progetos: 2</h1>
+                    <h1>Numero de proJetos: 2</h1>
                     <div class="projetos_carrosel">
 
                         <div class="projetos_item">
